[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecraft-rendezvous-rl"
version = "1.0.0"
description = "SARSA and actor-critic RL for safe and fuel-efficient planar spacecraft rendezvous"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24,<3", "matplotlib>=3.7,<4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
